--- a/src/style.css
+++ b/src/style.css
@@ -10,51 +10,6 @@
   }
 }
 
-@font-face {
-  font-family: "Monument Extended";
-  src: url("../assets/fonts/MonumentExtended-Regular.woff2") format("woff2"),
-    url("../assets/fonts/MonumentExtended-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Monument Extended";
-  src: url("../assets/fonts/MonumentExtended-Black.woff2") format("woff2"),
-    url("../assets/fonts/MonumentExtended-Black.woff") format("woff");
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Monument Extended";
-  src: url("../assets/fonts/MonumentExtended-Thin.woff2") format("woff2"),
-    url("../assets/fonts/MonumentExtended-Thin.woff") format("woff");
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Monument Extended";
-  src: url("../assets/fonts/MonumentExtended-Light.woff2") format("woff2"),
-    url("../assets/fonts/MonumentExtended-Light.woff") format("woff");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Monument Extended";
-  src: url("../assets/fonts/MonumentExtended-Bold.woff2") format("woff2"),
-    url("../assets/fonts/MonumentExtended-Bold.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
 :root {
   --shadow-color: 0deg 0% 63%;
   --shadow-elevation-low: 0px -0.4px 0.5px hsl(var(--shadow-color) / 0.34),
@@ -80,7 +35,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: "Monument Extended", sans-serif;
+  font-family: sans-serif;
 }
 
 body {
@@ -107,7 +62,7 @@ header input {
   border: none;
   border-radius: 100px;
   color: #000000;
-  font-family: "Monument Extended", sans-serif;
+  font-family: sans-serif;
   font-size: 2rem;
   font-weight: bold;
   padding: 3rem;
